--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,15 @@ nav ul li.btn div{
     margin: 5px;
 }
 
+/* main */
+
+main .panel-principal{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 @media all and (max-width: 900px){
 
     /* nav */
