--- a/css/style.css
+++ b/css/style.css
@@ -1,131 +1,247 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans Condensed', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 
-body, html{
-    width: 100%;
+body,
+html {
+  width: 100%;
 }
 
-.marker-red{
-    border: 2px solid red;
+.marker-red {
+  border: 2px solid red;
 }
 
-.marker-blue{
-    border: 2px solid blue;
+.marker-blue {
+  border: 2px solid blue;
 }
 
-main #bg-principal{
-    background: url(../img/bg-principal.jpg);
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
+main #bg-principal {
+  background: url(../img/bg-principal.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
 }
 
-header{
-    position: absolute;
-    width: 100%;
+main .overlay {
+  width: 100%;
+  height: 100vh;
+  background-color: #00000062;
+  z-index: 0;
+  position: absolute;
 }
 
-nav{
-    padding: 5px 40px;
+/* header */
+
+header {
+  position: absolute;
+  width: 100%;
+  z-index: 1;
 }
 
-nav ul{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+nav {
+  padding: 5px 40px;
 }
 
-nav ul li{
-    padding: 15px 0;
-    cursor: pointer;
-    list-style-type: none;
+nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
-nav ul li.opcoes{
-    position: relative;
-    width: auto;
-    margin: 0 28px;
-    text-align: center;
-    order: 3;
+nav ul li {
+  padding: 15px 0;
+  cursor: pointer;
+  list-style-type: none;
 }
 
-nav ul li.opcoes:hover{
-    opacity: 1;
-    bottom: 2px;
+nav ul li.opcoes {
+  position: relative;
+  width: auto;
+  margin: 0 28px;
+  text-align: center;
+  order: 3;
 }
 
-nav ul li#logo{
-    flex: 1;
-    color: #FFF6F6;
-    font-size: 28px;
-    cursor: default;
+nav ul li.opcoes:hover {
+  opacity: 1;
+  bottom: 2px;
 }
 
-nav ul li a{
-    color: #FFF6F6;
-    text-decoration: none;
+nav ul li#logo {
+  flex: 1;
+  color: #fff6f6;
+  font-size: 28px;
+  cursor: default;
 }
 
-nav ul li.btn{
-    display: none;
+nav ul li a {
+  color: #fff6f6;
+  text-decoration: none;
 }
 
-nav ul li.btn div{
-    width: 25px;
-    height: 3px;
-    background-color: rgb(241, 241, 241);
-    margin: 5px;
+nav ul li.btn {
+  display: none;
+}
+
+nav ul li.btn div {
+  width: 25px;
+  height: 3px;
+  background-color: rgb(241, 241, 241);
+  margin: 5px;
 }
 
 /* main */
 
-main .panel-principal{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+main .panel-principal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-@media all and (max-width: 900px){
+main .title {
+  font-size: 4rem;
+  font-weight: bold;
+  color: #dfdfdf;
+  border: 0.5 solid black;
+  z-index: 1;
+}
 
-    /* nav */
-    nav{
-        padding: 5px 30px;
-        
-    }
+main .sub-title {
+  font-size: 1.2rem;
+  color: #fff;
+  z-index: 1;
+}
 
-    nav ul li.opcoes{
-        width: 100%;
-        background-color: rgba(0, 0, 0, 0.096);
-        display: none;
-        font-size: 18px;
-        
-    }
+main .panel-principal .row-icons {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  padding: 20px;
+  z-index: 1;
+}
 
-    nav ul li.opcoes:hover{
-        border-radius: 5px;
-        box-shadow: inset 0 0 5px #33ffff,
-                    inset 0 0 10px #33ffff;
-    }
+main .panel-principal .row-icons ul {
+  position: relative;
+  display: flex;
+}
 
-    nav ul li.opcoes.mostrar{
-        display: block;
-    }
+main .panel-principal .row-icons ul li {
+  position: relative;
+  list-style: none;
+}
 
-    nav ul li.btn{
-        display: block;
-    }
+main .panel-principal .row-icons ul li a {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #fff;
+  margin: 0 10px;
+  text-decoration: none;
+  font-size: 30px;
+  border-radius: 50%;
+  color: #e2e2e2;
+  box-shadow: inset -1px -1px 2px rgba(0, 0, 0, 0.2),
+    2px 2px 5px rgba(0, 0, 0, 0.2);
+  transition: all 0.5s;
+  filter: opacity(0.8);
+}
 
-    nav ul li.opcoes:hover:after{
-        opacity: 0;
-    }
+main .panel-principal .row-icons ul li a:hover {
+  color: #999;
+  transform: translateY(-10px);
+  box-shadow: inset -1px -1px 2px rgba(0, 0, 0, 0.2),
+    2px 2px 5px rgba(0, 0, 0, 0.1);
+  filter: opacity(1);
+}
 
+main .panel-principal .row-icons ul li a img {
+  width: 35px;
+  height: 35px;
+  border-radius: 20px;
+  opacity: 0.2;
+  filter: grayscale(80%);
+  transition: all 0.5s;
+}
 
+main .panel-principal .row-icons ul li a img:hover {
+  opacity: 0.9;
+  filter: grayscale(10%);
+}
+
+main .panel-principal .row-icons img:nth-child(2) {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+main .panel-principal .row-icons img:hover {
+  filter: grayscale(10%);
+}
+
+@media all and (max-width: 900px) {
+  /* nav */
+  nav {
+    padding: 5px 30px;
+  }
+
+  nav ul li.opcoes {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.096);
+    display: none;
+    font-size: 18px;
+  }
+
+  nav ul li.opcoes:hover {
+    border-radius: 5px;
+    box-shadow: inset 0 0 5px #33ffff, inset 0 0 10px #33ffff;
+  }
+
+  nav ul li.opcoes.mostrar {
+    display: block;
+  }
+
+  nav ul li.btn {
+    display: block;
+  }
+
+  nav ul li.opcoes:hover:after {
+    opacity: 0;
+  }
+
+  nav ul li#logo {
+    font-size: 1.2rem;
+  }
+
+  /* main */
+
+  main .title {
+    font-size: 1.5rem;
+  }
+
+  main .sub-title {
+    font-size: 1rem;
+  }
+
+  main .panel-principal .row-icons ul li a {
+    width: 35px;
+    height: 35px;
+  }
+
+  main .panel-principal .row-icons ul li a img {
+    width: 25px;
+    height: 25px;
+  }
 }
 
 /*nav ul li.opcoes:after{
