--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,7 @@ main .panel-desafio .box-desafio .box-github .box-repo {
   width: 100%;
   height: 30vh;
   overflow-x: auto;
-  /*display: none;*/
+  display: none;
 }
 
 /*** main .panel-desafio .box-data ***/
@@ -363,6 +363,7 @@ main .panel-desafio .box-desafio .box-github .box-repo {
   margin-left: 20px;
   margin-right: 20px;
   font-size: 0.9rem;
+  cursor: pointer;
 }
 
 /*** main panel-desafio tabela ***/
@@ -389,9 +390,17 @@ table#table-data tbody tr {
   border-bottom: 1px solid #ddd;
 }
 
+table#table-data tbody tr td a {
+  color: #212529;
+  font-weight: bold;
+  text-decoration: none;
+}
+
 table#table-data tbody tr:nth-child(even) {
   background-color: #f2f2f2;
 }
+
+/* Barra de Scroll */
 
 /* media queries */
 
