--- a/css/style.css
+++ b/css/style.css
@@ -116,8 +116,25 @@ main .title {
 
 main .sub-title {
   font-size: 1.2rem;
+  width: 300px;
   color: #fff;
   z-index: 1;
+  text-align: center;
+}
+
+main .sub-title span {
+  color: rgb(228, 146, 38);
+}
+
+main .sub-title span a {
+  color: #fff;
+  text-decoration: none;
+}
+
+main .sub-title span #logo-qc {
+  width: 15px;
+  margin-left: 5px;
+  height: auto;
 }
 
 main .panel-principal .row-icons {
@@ -267,6 +284,10 @@ main .panel-desafio .box-desafio .box-github {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 
 main .panel-desafio .box-desafio .box-github .box-repo {
@@ -274,6 +295,7 @@ main .panel-desafio .box-desafio .box-github .box-repo {
   height: 30vh;
   overflow-x: auto;
   display: none;
+  padding: 10px;
 }
 
 /*** main .panel-desafio .box-data ***/
@@ -364,6 +386,7 @@ main .panel-desafio .box-desafio .box-github .box-repo {
   margin-right: 20px;
   font-size: 0.9rem;
   cursor: pointer;
+  border-radius: 5px;
 }
 
 /*** main panel-desafio tabela ***/
@@ -384,6 +407,8 @@ table#table-data thead tr {
 table#table-data th,
 td {
   padding: 12px 15px;
+  border-top-right-radius: 3px;
+  border-top-left-radius: 3px;
 }
 
 table#table-data tbody tr {
@@ -400,7 +425,54 @@ table#table-data tbody tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
+/* Footer */
+
+footer {
+  background-color: rgb(83, 89, 102);
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer p {
+  font-size: 1.1rem;
+  color: #fff;
+}
+
+footer p a {
+  color: rgb(228, 146, 38);
+  text-decoration: none;
+}
+
+footer p a span img {
+  width: 15px;
+  margin-left: 5px;
+  height: auto;
+}
+
 /* Barra de Scroll */
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-left: none;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px rgb(199, 199, 199);
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  /*background-color: rgb(144, 156, 177);*/
+  background-color: rgba(202, 133, 54, 0.685);
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  /*background-color: rgb(105, 131, 175);*/
+  background-color: rgb(202, 133, 54);
+}
 
 /* media queries */
 
